# car-inspection-platform

./: .gitignore  LICENSE  README.md
.github/workflows/: unit-tests.yaml
car-inspection/: Cargo.toml  Dockerfile
car-inspection/src/: main.rs
car-inspection/src/router/: router.rs
car-profile/: Cargo.toml  Dockerfile
car-profile/src/: main.rs
car-profile/src/api/: response.rs
car-profile/src/router/: router.rs
car-service/: Dockerfile  pom.xml
car-service/src/main/java/app/carinspection/platform/car/: CarApplication.java
car-service/src/main/java/app/carinspection/platform/car/application/: CarApplication.java
car-service/src/main/java/app/carinspection/platform/car/controller/: CarController.java
car-service/src/main/java/app/carinspection/platform/car/exception/: ApplicationException.java  ErrorType.java
car-service/src/main/java/app/carinspection/platform/car/handler/: CarResourceHandler.java
car-service/src/main/java/app/carinspection/platform/car/mapper/: CarMapper.java
car-service/src/main/java/app/carinspection/platform/car/model/: Page.java
car-service/src/main/java/app/carinspection/platform/car/repository/: CarRepository.java
car-service/src/main/java/app/carinspection/platform/car/service/: CarService.java
car-service/src/main/resources/: application.yaml  log.properties  logging.properties
inspection-service/: Dockerfile  pom.xml
inspection-service/src/main/java/app/carinspection/platform/inspection/: InspectionApplication.java
inspection-service/src/main/resources/: application.yaml
(+33 files in other folders)
