[package]
name = "car-profile"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
axum-test = "18.1.0"
chrono = { version = "0.4.42", features = ["serde"] }
env_logger = "0.11.8"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"] }
testcontainers = "0.25.0"
tokio = { version = "1.48.0", features = ["full"] }
